the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project-dep
  namespace: project
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: theproject
  template:
    metadata:
      labels:
        app: theproject
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
        - name: theproject
          image: the_project
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files
