the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
  namespace: project
spec:
  type: LoadBalancer
  selector:
    app: theproject
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
